make some tweaks
